fixed images on mobile and added hr to contact me

--- a/style.css
+++ b/style.css
@@ -255,6 +255,13 @@ body {
 
 }    
 
+#placeholder-size {
 
+float: none;
+width: 100%;
+height: 100%;
+
+
+}
 
 }
